tests/async_without_return.stderr
error: function should return Result
 --> $DIR/async_without_return.rs:4:1
  |
4 | / async fn async_something() {
5 | | }
  | |_^
