tests/async_without_return.rs
use fn_error_context::context;

#[context("context")]
async fn async_something() {
}

fn main() {
}
